packages/stylist/tests/macro_literal_integrations/unused_argument-fail.stderr
error: argument unused is not used, arguments must be used
 --> $DIR/unused_argument-fail.rs:4:9
  |
4 |     "#, unused = 1000, used = "black"
  |         ^^^^^^
